welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: Invalid literal number
    for(i<-1to6){
           ^Program:3: error: illegal start of simple expression
    for(i<-1to6){
           ^Program:9: error: ')' expected but '}' found.
  }
  ^