welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  while(!estSurBiscuit){
    for(i<-1to6){
      avance()
      if(estSurBiscuit){
        return
      }
    }
  }
}